--- a/css/style.css
+++ b/css/style.css
@@ -279,71 +279,113 @@ color: white;
 {
     padding-top:300px;
     position: absolute;
-    z-index:1;
-    margin:0;
-    display: inline;
+    z-index:2;
 
+}
+
+.slide-content
+{
+    position: relative;
+    z-index:4;
+    top:0px;
+    padding-top:60px;
+    height:100%;
+    width:auto;
+    margin:auto;
+    display:block;
 }
 
 .ralph-card img
 {
     position:absolute;
+    top:86px;
     height: auto;
-    width: 40%;
-    margin:0;
-    left: -3px;
-    bottom:227px;
+    width: 35%;
+    float:left;
+    left: 90px;
+
 }
 
 .peter-card img
 {
     position:absolute;
+    right: 90px;
+    top:86px;
     height: auto;
-    width: 40%;
-    margin:0;
-    right: 10px;
-    bottom:227px;
+    width: 35%;
+    float:right;
+    z-index: 5;
 }
 
 .troy-card img
 {
-    position:absolute;
+    position:relative;
     height: auto;
-    width: 40%;
+    width: 45.5%;
     float:left;
-    top: 300px;
+    padding-top: 144px;
+    padding-left: 91px;
+
 }
 
 .george-card img
 {
-    position:relative;
+    position:absolute;
     height: auto;
-    width: 40%;
+    width: 35%;
+    bottom: 230px;
+    top:203px;
+    right: 90px;
+    float:right;
+}
+
+.nap-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 240px;
+    top:320px;
+    right: 90px;
+    float:right;
+}
+
+.einstein-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 240px;
+    top:320px;
+    right: 462px;
     float:right;
 }
 
 #slider {
    margin: 0 auto;
-   width: 1200px;
+   width: 900px;
    max-width: 100%;
    text-align: center;
     position: relative;
     top: 0px;
-    z-index: 3;
+    z-index: 2;
 }
 #slider input[type=radio] {
    display: none;
+    position:absolute;
+    z-index: 1;
 }
 #slider label {
    cursor:pointer;
    text-decoration: none;
+    
 }
 #slides {
    padding: 10px;
    border: 3px solid #ccc;
    background: #fff;
    position: relative;
-   z-index: 1;
+   z-index: 2;
 }
 #overflow {
    width: 100%;
@@ -366,7 +408,6 @@ color: white;
    width: 400%;
    line-height: 0;
     height:500px;
-    
 }
 
 #slides .slide {
@@ -417,10 +458,10 @@ color: white;
    margin: 0 8px 0 0;
    display: block;
 }
-#slide1:checked ~ #controls label:nth-last-child(2),
-#slide2:checked ~ #controls label:nth-last-child(3),
-#slide3:checked ~ #controls label:nth-last-child(4),
-#slide4:checked ~ #controls label:nth-last-child(1) {
+#slide1:checked ~ #controls label:nth-last-child(1),
+#slide2:checked ~ #controls label:nth-last-child(4),
+#slide3:checked ~ #controls label:nth-last-child(3),
+#slide4:checked ~ #controls label:nth-last-child(2) {
    background: url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
    float:left;
    margin: 0 0 0 7px;
