--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header
     position: fixed;
     opacity: 0.9;
     z-index: 2;
+    overflow:hidden;
 }
 
 h1, h2 
@@ -37,19 +38,27 @@ header nav
 {
     padding-top:13px;
     text-align: right;
+    position: relative;
+    padding-left:900px;
 }
 
 .logo img
 {
+    position: absolute;
     margin:auto;
     flex-shrink:0;
-    width:14%;
+    top:7px;
+    width:3%;
+    left:100px;
+    z-index:1;
 }
 .clanName img
 {
+    position: absolute;
     padding-top: 10px;
     margin-left:0;
-    width:50%;
+    width:20%;
+    left: 130px;
 }
 
 header nav ul li a
@@ -82,14 +91,14 @@ body
 }
 
 .section h1 {
+position:absolute;
 font-family: 'Roboto', sans-serif;
-  text-align: center;
     font-weight: 900;
   font-size: 4rem;
 color: white;
-  padding-bottom: 500px;
+  top:0;
   margin: 15px;
-  z-index: 2;
+  z-index: 4;
   opacity: 100;
 }
 
@@ -174,11 +183,11 @@ color: white;
 
 .text2
 {
-    position:relative;
+    position:absolute;
     overflow-y: hidden;
     z-index:2;
     left: 600px;
-    top:-80px;
+    top:10px;
     text-align:left;
     font-size: 20px;
     font-weight: bold;
@@ -303,6 +312,7 @@ color: white;
     width: 35%;
     float:left;
     left: 90px;
+    z-index: 8;
 
 }
 
@@ -314,7 +324,7 @@ color: white;
     height: auto;
     width: 35%;
     float:right;
-    z-index: 5;
+    z-index: 8;
 }
 
 .troy-card img
@@ -325,6 +335,7 @@ color: white;
     float:left;
     padding-top: 144px;
     padding-left: 91px;
+    z-index: 8;
 
 }
 
@@ -337,6 +348,7 @@ color: white;
     top:203px;
     right: 90px;
     float:right;
+    z-index: 8;
 }
 
 .nap-card img
@@ -348,6 +360,7 @@ color: white;
     top:320px;
     right: 90px;
     float:right;
+    z-index: 8;
 }
 
 .einstein-card img
@@ -359,6 +372,135 @@ color: white;
     top:320px;
     right: 462px;
     float:right;
+    z-index: 8;
+}
+
+.sai-card img
+{
+    position:absolute;
+    top:86px;
+    height: auto;
+    width: 35%;
+    float:left;
+    left: 90px;
+    z-index: 7;
+}
+
+.migo-card img
+{
+    position:relative;
+    height: auto;
+    width: 45.5%;
+    float:left;
+    padding-top: 144px;
+    padding-left: 91px;
+    z-index: 7;
+}
+
+.ej-card img
+{
+    position:absolute;
+    right: 90px;
+    top:86px;
+    height: auto;
+    width: 35%;
+    float:right;
+    z-index: 7;
+}
+
+.derrick-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 230px;
+    top:203px;
+    right: 90px;
+    float:right;
+    z-index: 7;
+}
+
+.cheska-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 240px;
+    top:320px;
+    right: 462px;
+    float:right;
+    z-index: 7;
+}
+
+.zandro-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 240px;
+    top:320px;
+    right: 90px;
+    float:right;
+    z-index: 7;
+}
+
+.vince-card img
+{
+    position:absolute;
+    top:86px;
+    height: auto;
+    width: 35%;
+    float:left;
+    left: 90px;
+    z-index: 8;
+
+}
+
+.frank-card img
+{
+    position:absolute;
+    right: 90px;
+    top:86px;
+    height: auto;
+    width: 35%;
+    float:right;
+    z-index: 8;
+}
+
+.wayne-card img
+{
+    position:relative;
+    height: auto;
+    width: 45.5%;
+    float:left;
+    padding-top: 144px;
+    padding-left: 91px;
+    z-index: 8;
+
+}
+
+.brendan-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 230px;
+    top:203px;
+    right: 90px;
+    float:right;
+    z-index: 8;
+}
+
+.gab-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 240px;
+    top:320px;
+    right: 90px;
+    float:right;
+    z-index: 8;
 }
 
 #slider {
@@ -436,7 +578,7 @@ color: white;
    margin: -280px 0 0 0;
    width: 100%;
    height: 50px;
-   z-index: 3;
+   z-index: 2;
    position: absolute;
 }
 #controls label {
@@ -500,4 +642,74 @@ color: white;
       max-width: calc(100% - 140px);
       margin: 0 auto;
    }
+}
+
+@media (max-width: 500px) {
+    header
+{
+    background-color: black;
+    height: 112 px;
+    width:100%;
+    line-height: 112 px;
+    margin:0;
+    position: fixed;
+    opacity: 0.9;
+    z-index: 2;
+}
+
+h1, h2 
+{
+    margin:0;
+}
+
+ul
+{
+    list-style: none;
+}
+
+ul li 
+{
+   display: inline-block;
+
+}
+
+header nav
+{
+    padding-top:13px;
+    padding-left: 240px;
+    text-align: right;
+}
+.header-logos
+    {
+        display:inline-block;
+    }
+.logo img
+{
+    margin:auto;
+    position: absolute;
+    flex-shrink:0;
+    width:12%;
+    left:0;
+    top:5px;
+}
+.clanName img
+{
+    position: absolute;
+    left: 40px;
+    padding-top: 14px;
+    margin-left:0;
+    width:50%;
+}
+    
+    header nav ul li a {
+    
+         padding-right: 15px;
+         font-size: 11px;
+         font-weight: bold;
+         font-family: 'Roboto', sans-serif; 
+         color: white;
+         transition: all 0.5s;
+    }
+    
+    
 }
