--- a/css/style.css
+++ b/css/style.css
@@ -31,15 +31,17 @@ ul
 ul li 
 {
    display: inline-block;
-
 }
 
 header nav
 {
+    position:relative;
     padding-top:13px;
     text-align: right;
     position: relative;
-    padding-left:900px;
+    right:-890px;
+    z-index: 3;
+    
 }
 
 .logo img
@@ -503,6 +505,18 @@ color: white;
     z-index: 8;
 }
 
+.danna-card img
+{
+    position:absolute;
+    height: auto;
+    width: 35%;
+    bottom: 240px;
+    top:320px;
+    right: 462px;
+    float:right;
+    z-index: 8;
+}
+
 #slider {
    margin: 0 auto;
    width: 900px;
@@ -643,6 +657,88 @@ color: white;
       margin: 0 auto;
    }
 }
+
+/* About Page */
+
+
+.title
+{
+    position: relative;
+    overflow: hidden;
+    padding-top: 130px;
+    left:200px;
+}
+
+/* socmed buttons */
+
+.icons
+{
+    position:fixed;
+    z-index: 4;
+    top:80%;
+    transform: translateY(-50%);
+    transform: translateX(-42%);
+    width: 100%;
+    text-align: center;
+}
+
+.btn
+{
+    display:inline-block;
+    width:90px;
+    height:90px;
+    background: #3498db;
+    margin: 10px;
+    border-radius: 30%;
+    box-shadow: 0 5px 25px -5px #e67e22;
+    color: #e67e22;
+    overflow:hidden;
+    position:relative;
+    z-index: 4;
+}
+
+.btn i{
+    line-height: 80px;
+    font-size: 29px;
+    transition: 0.2 linear;
+    color: #3498db;
+}
+
+.btn:hover i{
+    transform: scale(1.3);
+    color: #ffffff;
+}
+
+.btn::before{
+    content: "";
+    position: absolute;
+    width: 120%;
+    height: 120%;
+    background: #e67e22;
+    transform: rotate(45deg);
+    left: -110%;
+    top: 90%;
+}
+
+.btn:hover::before{
+    animation: aaa 0.7s 1;
+    top: -10%;
+    left: -10%;
+}
+@keyframes aaa {
+    0%{
+        left:-110%;
+        top: 90%;
+    }50%{
+        left: 10%;
+        top:-30%;
+    }100%{
+        top: -10%;
+        left: -10%;
+    }
+}
+
+/* Responsive */
 
 @media (max-width: 500px) {
     header
