--- a/css/about.css
+++ b/css/about.css
@@ -153,7 +153,7 @@ header nav ul li a:hover
     line-height: 80px;
     font-size: 29px;
     transition: 0.2 linear;
-    color: #bdc3c7;
+    color: #a6a6a6;
 }
 
 .btn:hover i{
