--- a/css/games.css
+++ b/css/games.css
@@ -1,7 +1,8 @@
 *, html, body
 {   margin: 0;
     padding: 0;
-    overflow:hidden;
+    overflow-x: hidden;
+
 }
 
 
@@ -21,8 +22,9 @@ header
     width:100%;
     line-height: 112 px;
     margin:0;
+    position: fixed;
     opacity: 0.9;
-    z-index: 2;
+    z-index: 4;
     overflow:hidden;
 }
 
@@ -44,8 +46,7 @@ ul li
 header nav
 {
     position:relative;
-    top:3px;
-    padding-top:9.5px;
+    padding-top:13px;
     text-align: right;
     position: relative;
     right:-890px;
@@ -75,9 +76,9 @@ header nav
 header nav ul li a
 {
     padding-right: 30px;
+    font-weight: bold;
+    font-size: 17px;
     font-family: 'Roboto', sans-serif; 
-    font-weight:550;
-    font-size:17px;
     color: white;
     transition: all 0.5s;
 }
@@ -87,9 +88,116 @@ header nav ul li a:hover
     text-decoration: none;
 }
 
+.title
+{
+    position: relative;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    overflow: hidden;
+    top:-0px;
+    text-align: center;
+}
+
+.title h1
+{
+    font-weight: 600;
+    font-size: 50px;
+}
+
+.container-games
+{
+    position: relative;
+    top: -180px;
+    width: 1200px;
+    height: 600px;
+    margin: 240px auto;
+    overflow:hidden;
+    z-index: 1;
+}
+
+.container-games .box
+{
+    
+    position: relative;
+    width: calc(400px - 30px);
+    height: calc(300px - 30px);
+    float:left;
+    margin: 15px;
+    box-sizing: border-box;
+    background: #2b2b2b;
+    border-radius: 10px;
+    z-index: 0;
+    overflow:hidden;
+}
+
+.container-games .box .icon
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: orange;
+    transition: 0.5s;
+    z-index: 1;
+}
+
+.container-games .box .icon img
+{
+    width: 30%;
+    height:auto;
+    position: absolute;
+    left: 187px;
+    top: 130px;
+    transform: translate(-50%, -50%);
+    transition: 0.5s;
+    
+}
+
+.container-games .box:hover .icon
+{
+    top: 20px;
+    left: 150px;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+.container-games .box:hover .icon img
+{
+    height: auto;
+    width: 60%;
+    position: relative;
+    left: 40px;
+    top: 40px;
+}
+
+.container-games .box .content
+{
+    position: absolute;
+    height: 100%;
+    text-align: center;
+    height: calc(100% - 100px);
+    box-sizing: border-box;
+    top: 85px;
+    padding:20px;
+    overflow: hidden;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+.container-games .box .content h3
+{
+    margin: 0;
+    padding: 0;
+    overflow:hidden;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
 .icons
 {
-    position:absolute;
+    position:fixed;]
     z-index: 4;
     top:80%;
     transform: translateY(-50%);
@@ -117,7 +225,7 @@ header nav ul li a:hover
     line-height: 80px;
     font-size: 29px;
     transition: 0.2 linear;
-    color: #bdc3c7;
+    color: #a6a6a6;
 }
 
 .btn:hover i{
