--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ color: white;
 {
     padding-top:300px;
     position: absolute;
-    z-index:2;
+    z-index:1;
 
 }
 
@@ -304,6 +304,7 @@ color: white;
     width:auto;
     margin:auto;
     display:block;
+    overflow:hidden;
 }
 
 .ralph-card img
@@ -517,6 +518,29 @@ color: white;
     z-index: 8;
 }
 
+.jimuel-card img
+{
+    position:absolute;
+    top:86px;
+    height: auto;
+    width: 35%;
+    float:left;
+    left: 90px;
+    z-index: 8;
+    
+}
+
+.doublemad-card img
+{
+    position:relative;
+    height: auto;
+    width: 45.5%;
+    float:left;
+    padding-top: 144px;
+    padding-left: 91px;
+    z-index: 8;
+}
+
 #slider {
    margin: 0 auto;
    width: 900px;
@@ -525,11 +549,13 @@ color: white;
     position: relative;
     top: 0px;
     z-index: 2;
+    overflow:hidden;
 }
 #slider input[type=radio] {
    display: none;
     position:absolute;
     z-index: 1;
+    overflow:hidden;
 }
 #slider label {
    cursor:pointer;
@@ -542,6 +568,7 @@ color: white;
    background: #fff;
    position: relative;
    z-index: 2;
+   overflow:hidden;
 }
 #overflow {
    width: 100%;
@@ -549,15 +576,19 @@ color: white;
 }
 #slide1:checked ~ #slides .inner {
    margin-left: 0;
+    overflow:hidden;
 }
 #slide2:checked ~ #slides .inner {
    margin-left: -100%;
+    overflow:hidden;
 }
 #slide3:checked ~ #slides .inner {
    margin-left: -200%;
+    overflow:hidden;
 }
 #slide4:checked ~ #slides .inner {
    margin-left: -300%;
+    overflow:hidden;
 }
 #slides .inner {
    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
@@ -587,6 +618,7 @@ color: white;
 }
 #slides .slide_4 {
    background: #00A8E8;
+    overflow:hidden;
 }
 #controls {
    margin: -280px 0 0 0;
@@ -701,7 +733,7 @@ color: white;
     line-height: 80px;
     font-size: 29px;
     transition: 0.2 linear;
-    color: #3498db;
+    color: #a6a6a6;
 }
 
 .btn:hover i{
